# hacs-omo-lavanderia

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yml
custom_components/omo_lavanderia/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/omo_lavanderia/api/: __init__.py  auth.py  client.py  exceptions.py  models.py
custom_components/omo_lavanderia/translations/: en.json  pt-BR.json
tests/: __init__.py  conftest.py  test_client.py  test_config_flow.py  test_coordinator.py  test_init.py  test_models.py
